@@ -4,7 +4,6 @@
       <sourceFilesUrls>
         <item url="file://$PROJECT_DIR$/media/js/ajax.min.js" />
         <item url="file://$PROJECT_DIR$/media/js/log.min.js" />
-        <item url="file://$PROJECT_DIR$/media/js/main.min.js" />
         <item url="file://$PROJECT_DIR$/media/js/site-read.min.js" />
         <item url="file://$PROJECT_DIR$/media/js/system.min.js" />
         <item url="file://$PROJECT_DIR$/media/js/webauthn-mfa.min.js" />
