@@ -870,6 +870,14 @@ PANOPTICON_SITES_LBL_TROUBLESHOOT_FUBAR_BLAH1="Normally we can detect the nature
 PANOPTICON_SITES_LBL_TROUBLESHOOT_FUBAR_BLAH2="Instead, we got an error which we should be able to provide troubleshooting information for (<span class=\"font-monospace\">%s</span>), but we don't have the code for it. This should have not happened."
 PANOPTICON_SITES_LBL_TROUBLESHOOT_FUBAR_BLAH3="Please delete all files and folders inside the <code>tmp</code> folder of Akeeba Panopticon. This addresses the problem of this page's cached copy being severely out of date. If this doesn't help, please let us know."
 
+PANOPTICON_SITES_LBL_TROUBLESHOOT_DEBUG_INFO="Troubleshooting information"
+PANOPTICON_SITES_LBL_TROUBLESHOOT_DEBUG_HTTP_STATUS="HTTP Status"
+PANOPTICON_SITES_LBL_TROUBLESHOOT_DEBUG_HTTP_BODY="HTTP Body"
+PANOPTICON_SITES_LBL_TROUBLESHOOT_DEBUG_HTTP_HEADERS="HTTP Headers"
+PANOPTICON_SITES_LBL_TROUBLESHOOT_DEBUG_HTTP_HEADER_NO_STRING="(header content is not a string)"
+PANOPTICON_SITES_LBL_TROUBLESHOOT_DEBUG_HTTP_HEADER_NO_PRINTABLE="(header content is not an array or string)"
+PANOPTICON_SITES_LBL_TROUBLESHOOT_DEBUG_MUST_ENABLE_FOR_ISSUE="Before you attempt to submit an issue about this connection issue please go to Administration, System Configuration, System and enable Debug System. Then come back here and retry the same connection. You will receive detailed troubleshooting information which you need to include in your issue."
+
 ;; SystemConfiguration
 PANOPTICON_SYSCONFIG_TITLE=System Configuration
 PANOPTICON_SYSCONFIG_BTN_PHPINFO=PHP Information
