@@ -1,0 +1,18 @@
+<?php
+/**
+ * @package   panopticon
+ * @copyright Copyright (c)2023-2023 Nicholas K. Dionysopoulos / Akeeba Ltd
+ * @license   https://www.gnu.org/licenses/agpl-3.0.txt GNU Affero General Public License, version 3 or later
+ */
+
+namespace Akeeba\Panopticon\Exception\SiteConnection;
+
+
+use Akeeba\Panopticon\Exception\SiteConnectionException;
+
+defined('AKEEBA') || die;
+
+class FrontendPasswordProtection extends SiteConnectionException
+{
+
+}
